syntax = "proto3";

package bonanza.model.encoding;

import "google/protobuf/empty.proto";

option go_package = "github.com/buildbarn/bonanza/pkg/proto/model/encoding";

message DeterministicEncryptingBinaryEncoder {
  // 128, 192, or 256-bit key that is used to encrypt the initialization
  // vector and the data.
  bytes encryption_key = 1;
}

message BinaryEncoder {
  oneof encoder {
    // Compress data using the "simple LZW" algorithm. This algorithm is
    // identical to regular LZW, except that there is no limit on the
    // maximum number of codes. There is also no mechanism for resetting
    // the dictionary.
    google.protobuf.Empty lzw_compressing = 1;

    // Encrypt data using AES, using the Counter (CTR) block cipher mode
    // of operation. The first 128 bits of the SHA-256 hash of the
    // plaintext are encrypted and used as the initialization vector,
    // which is stored in the decoding parameters. To reduce information
    // leakage, input is padded using the PADMÃ‰ algorithm.
    DeterministicEncryptingBinaryEncoder deterministic_encrypting = 2;
  }
}
